update to have tests that can run using the plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 6,
+        "ecmaVersion": 12,
         "sourceType": "module"
     },
     "plugins": [
@@ -14,11 +14,26 @@
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "semi": "off"
+        "semi": "off",
+        "linebreak-style": ["error", "windows"],
+        "valid-jsdoc": "off",
+        "require-jsdoc": "off",
+        "guard-for-in": "off",
+        "max-len": ["error", { "code": 120 }],
+        "indent": ["error", 4],
+        "no-tabs": ["error", { "allowIndentationTabs": true }]
     },
     "ignorePatterns": [
         "out",
         "dist",
         "**/*.d.ts"
+    ],
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es2021": true
+    },
+    "extends": [
+        "google"
     ]
 }
